fix text align for overview

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ h2 {
 }
 
 .overview p {
-    text-align: justify;
+    text-align: center;
     margin: 3% 13% 0 13%;
     font-size: 120%;
     line-height: 1.5rem;
